--- a/scss/_callout.scss
+++ b/scss/_callout.scss
@@ -5,11 +5,13 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  z-index: 1000;
 
   h2 {
     font-size: 3.5rem;
     font-weight: 700;
     display: block;
     max-width: 30rem;
+    z-index: 1000;
   }
 }
