--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -14,6 +14,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  z-index: 1;
 
   h1 {
     font-size: 4rem;
@@ -25,6 +26,7 @@
     height: 100vh;
   }
 }
+
 header {
   position: relative;
   background-color: black;
